Completed slides for first section, added notes

--- a/class1.html
+++ b/class1.html
@@ -79,6 +79,26 @@
                 <img src="images/client-server.jpg" alt="Laptop and server connected via the internet"/>
 				<p class="credit">Photo credits: <a href="http://www.flickr.com/photos/papalars/5210226441/" target="_blank">Andrew E. Larson</a> and <a href="http://www.flickr.com/photos/johnseb/3425464/" target="_blank">John Seb Barber</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
             </section>
+            <section>
+                <h3>PHP can talk to databases</h3>
+                <img src="images/elephants.jpg" alt="Two elephants interacting"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/ginable/325235488/">Ginable</a> <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">cc</a>
+            </section>
+            <section>
+                <h3>PHP lets you reuse code</h3>
+                <img src="images/desert-landscape.jpg" alt="Desert landscape"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/philsnyder/4216356826/" target="_blank">Phil Synder</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+            </section>
+            <section>
+                <h3>What is PHP?</h3>
+                <ul>
+                    <li>Originally, PHP stood for Personal Home Page. The acronym doesn't mean much anymore, but officially it is called PHP: Hypertext Processor</li>
+                    <li>PHP is a server-side processing language. The server reads the PHP code and outputs browser-friendly HTML</li>
+                    <li>PHP has simple support for databases like MySQL.</li>
+                    <li>With PHP, you can write code once and use it everywhere. Remember, you want DRY code (Don't Repeat Yourself).</li>
+                    <li>PHP lets you build dynamic webpages that respond to input from users.</li>
+                </ul>
+            </section>
          
          </section>
          
