--- a/class1.html
+++ b/class1.html
@@ -99,8 +99,36 @@
                     <li>PHP lets you build dynamic webpages that respond to input from users.</li>
                 </ul>
             </section>
-         
-         </section>
+        </section>
+        <!-- Install -->
+        <section>
+            <section>
+                <h3>Let's Develop It</h3>
+                <p>Let's get PHP running on your machine.<p>
+                <p>PCs: <a href="http://www.wampserver.com/en/download.php">http://www.wampserver.com/en/download.php</a></p>
+                <p>Macs: <a href="http://www.mamp.info/en/downloads/index.htm">http://www.mamp.info/en/downloads/index.htm</a></p>
+                <p>Test: <a href="http://localhost/">http://localhost/</a>
+            </section>
+            <section>
+                <h3>Let's Develop It</h3>
+                <p>Make your first page!</p>
+                <pre><code>
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+    &lt;head&gt;
+        &lt;title&gt;Test Page&lt;/title&gt;
+	&lt;/head&gt;
+	&lt;body&gt;
+        &lt;p&gt;
+        &lt;?php
+            echo ("Hello World");
+        ?&gt;
+        &lt;/p&gt;
+    &lt;/body&gt;
+&lt;/html&gt;
+				</code></pre>
+            </section>
+        </section>
          
  
 			</div><!-- Close .slides -->
@@ -130,12 +158,12 @@
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
-					{ src: 'reveal/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'reveal/plugin/markdown/showdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'reveal/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'reveal/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					{ src: 'reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'reveal.js/plugin/markdown/showdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: 'reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
 
