Added introduction to variables.

--- a/class1.html
+++ b/class1.html
@@ -169,7 +169,60 @@
         </section>
         <!-- Variables -->
         <section>
-
+            <section>
+				<h3>Variables</h3>
+                <p>A variable is a place to store values</p>
+				<img src="images/empty-glass.jpg" alt="Empty glass"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/giuliag/3570562404/" target="_blank">giulia gasparro</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+			</section>
+            <section>
+				<h3>Variable Values</h3>
+                <ul>
+                    <li>When you first create a variable, it does not have a value (it is null).</li>
+                    <li>You can set a value for a variable.</li>
+                    <li>Variables can hold different types of information, like words, numbers, and collections of data.</li>
+                    <li>The value of a variable can change over time.</li>
+                </ul>
+			</section>
+            <section>
+				<h3>Naming Variables</h3>
+                <ul>
+                    <li>In PHP, you write a variable with a dollar sign followed by the name of the variable.</li>
+                    <li>The variable name is case-sensitive.</li>
+                    <li>A new variable needs to have a unique name.</li>
+                    <li>Variable names need to start with a letter or underscore.</li>
+                    <li>Variable names can only be made of letters and numbers.</li>
+                </ul>
+			</section>
+            <section>
+				<h3>Creating a Variable</h3>
+                <p>To create a variable, just type a dollar sign and the variable name. PHP will create the variable for you.</p>
+                <pre><code>
+&lt;?php
+    $numberOfKittens;
+?&gt;
+				</code></pre>
+                <p>It is a good idea to give your variable a starting value. This is called initializing the variable.</p>
+                <pre><code>
+&lt;?php
+    $numberOfKittens = 5;
+?&gt;
+				</code></pre> 
+			</section>
+            <section>
+				<h3>Using a Variable</h3>
+                <p>Once you have created a variable, you can use it in your code. Just type a dollar sign and the name of the variable</p>
+                <pre><code>
+&lt;?php
+    var $numberOfKittens = 5;
+    echo $numberOfKittens;
+?&gt;
+				</code></pre>
+			</section>
+            <section>
+				<h3>Let's Develop It</h3>
+                <p>In your PHP file, create a variable and give it a valid name and a value. Then, echo it out on the screen.</p> 
+			</section>
         </section>
         <!-- Functions -->
         <section>
