Started section on strings

--- a/class1.html
+++ b/class1.html
@@ -300,7 +300,21 @@
         </section>
         <!-- Strings -->
         <section>
-        
+            <section>
+                <h3>Strings</h3>
+                <p>Variable can be strings, groups of characters. You declare a string with single quotes.</p>
+                <pre><code>
+&lt;?php
+    $kittensName = 'Fluffy';
+?&gt;
+				</code></pre>
+                <p>If you want to use a single quote in your string, you'll need to "escape" it with a backslash.</p>
+                <pre><code>
+&lt;?php
+    echo 'I\'d like to use an apostrophe';
+?&gt;
+				</code></pre>                
+            </section>
         </section>
         <!-- Functions -->
         <section>
