Finished section on strings

--- a/class1.html
+++ b/class1.html
@@ -315,6 +315,32 @@
 ?&gt;
 				</code></pre>                
             </section>
+            <section>
+                <h3>String Operators</h3>
+                <p>You can put strings together with a period, the concatenation operator.</p>
+                <pre><code>
+&lt;?php
+    $kittensName = 'Fluffy';
+    $fullName = $kittensName . ' McDougle';
+    echo $fullName; //Outputs 'Fluffy McDougle'
+?&gt;
+				</code></pre>
+            </section>
+            <section>
+                <h3>String Operators</h3>
+                <p>You can also use .=, the concatenating assignment operator, to add things to the end of a string.</p>
+                <pre><code>
+&lt;?php
+    $kittensName = 'Admiral';
+    $kittensName .= ' Snuggles';
+    echo $kittensName; //Outputs 'Admiral Snuggles'
+?&gt;
+				</code></pre>
+            </section>
+            <section>
+				<h3>Let's Develop It</h3>
+                <p>Create two variables, a first name and a last name, and then put them together to make a full name. Don't forget to echo your results!</p> 
+			</section>
         </section>
         <!-- Functions -->
         <section>
