Fixed various typos

--- a/class1.html
+++ b/class1.html
@@ -295,7 +295,7 @@
 			</section>
             <section>
 				<h3>Let's Develop It</h3>
-                <p>Create two variables, and try some arithmetic operators. Don't forget to echo your results!</p> 
+                <p>Create two variables and try some arithmetic operators. Don't forget to echo your results!</p> 
 			</section>
         </section>
         <!-- Strings -->
