--- a/class1.html
+++ b/class1.html
@@ -228,6 +228,11 @@
         <!-- Numbers-->
         <section>
             <section>
+				<h3>Numbers!</h3>
+				<img src="images/kitten-basket.jpg" alt="Cat jumping on another cat."/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/tom-poes/2159348460/" target="_blank">WJ van den Eijkhof</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+			</section>
+            <section>
 				<h3>Numbers</h3>
                 <p>Variable can be numbers, either integers or floats (decimals).</p>
                 <pre><code>
@@ -238,6 +243,7 @@
 				</code></pre>
                 <p>PHP will automatically convert integers to floats if needed</p>
 			</section>
+            
             <section>
 				<h3>Arithmetic Operators</h3>
                 <p>Once you have numbers, you can do math with them!</p>
@@ -302,19 +308,24 @@
         <section>
             <section>
                 <h3>Strings</h3>
-                <p>Variable can be strings, groups of characters. You declare a string with single quotes.</p>
+                <p>Variable can be strings, groups of characters. You put your string in quotes.</p>
                 <pre><code>
 &lt;?php
     $kittensName = 'Fluffy';
 ?&gt;
 				</code></pre>
-                <p>If you want to use a single quote in your string, you'll need to "escape" it with a backslash.</p>
+                <p>If you want to use a quote in your string, you'll need to "escape" it with a backslash.</p>
                 <pre><code>
 &lt;?php
     echo 'I\'d like to use an apostrophe';
 ?&gt;
 				</code></pre>                
             </section>
+            <section>
+				<h3>Playing with Strings</h3>
+				<img src="images/kitten-string.jpg" alt="Cat playing with string"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/dirtbikedba/5796961878/" target="_blank">Mike Lawson</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+			</section>
             <section>
                 <h3>String Operators</h3>
                 <p>You can put strings together with a period, the concatenation operator.</p>
@@ -328,7 +339,7 @@
             </section>
             <section>
                 <h3>String Operators</h3>
-                <p>You can also use .=, the concatenating assignment operator, to add things to the end of a string.</p>
+                <p>You can also use .= to add things to the end of a string.</p>
                 <pre><code>
 &lt;?php
     $kittensName = 'Admiral';
@@ -337,6 +348,11 @@
 ?&gt;
 				</code></pre>
             </section>
+            <section>
+				<h3>Concatenate!</h3>
+				<img src="images/concatenate.jpg" alt="Cat jumping on another cat."/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/furlined/8191032061/" target="_blank">Matt</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+			</section>
             <section>
 				<h3>Let's Develop It</h3>
                 <p>Create two variables, a first name and a last name, and then put them together to make a full name. Don't forget to echo your results!</p> 
