Minor changes to download/install directions

--- a/class1.html
+++ b/class1.html
@@ -77,12 +77,12 @@
                 <h3>Let's Develop It</h3>
                 <p>Let's get PHP running on your machine.<p>
                 <p>PCs: <a href="http://www.wampserver.com/en/download.php">http://www.wampserver.com/en/download.php</a></p>
-                <p>Macs: <a href="http://www.mamp.info/en/downloads/index.htm">http://www.mamp.info/en/downloads/index.htm</a></p>
+                <p>Macs: <a href="http://www.mamp.info/en/downloads/index.html">http://www.mamp.info/en/downloads/index.html</a></p>
                 <p>Test: <a href="http://localhost/">http://localhost/</a>
             </section>
             <section>
                 <h3>Let's Develop It</h3>
-                <p>Make your first page! You'll need to call it index.php, and put it in your www directory. On Windows, the default is C:\wamp\www. On a Mac, it is \Applications\MAMP\www\.</p>
+                <p>Make your first page! Find your www directory. On Windows, the default is C:\wamp\www. On a Mac, it is \Applications\MAMP\www\. Create a new folder, called gdi, and then create a file inside called index.php.</p>
                 <pre><code>
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
