--- a/class2.html
+++ b/class2.html
@@ -89,7 +89,7 @@
         return ($total * $tipPercent);
     }
 
-    $billTotal = 10.00;
+    $billTotal = 10;
     $billTip   = calculateTip($billTotal);
     $receipt   = 'Meal: ' . $billTotal . ' Tip: ' . $billTip . 
         ' Total: ' . ($billTotal + $billTip);
@@ -97,7 +97,44 @@
 ?&gt;
 				</code></pre>
             </section>
-        </section> 
+        </section>
+
+        <!-- Variable Scope -->
+        <section id="scope">
+            <section>
+                <h3>Variable Scope</h3>
+                <p>The scope of a variable is how long the computer will remember it.</p>
+                <img src="images/footprints.jpg" alt="Footprints being washed away"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/heyvikram/187950111/" target="_blank">_vikram</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+                
+            </section>
+            <section>
+                <h3>Global Scope</h3>
+                <p>A variable declared outside a function has a <span class="yellow">global</span> scope and can only be accessed outside a function.</p>
+                  <pre><code>
+&lt;?php
+    $awesomeGroup = 'Girl Develop It'; //Global scope
+    function whatIsAwesome() {
+        echo $awesomeGroup . ' is pretty awesome.';
+    }
+    whatIsAwesome();
+?&gt;
+				</code></pre>
+            </section>
+            <section>
+                <h3>Local Scope</h3>            
+                <p>A variable declared within a function has a <span class="yellow">local</span> scope and can only be accessed within that function.</p>
+                <pre><code>
+&lt;?php
+    function whatIsAwesome() {
+        $awesomeGroup = 'Girl Develop It'; //Local scope
+    }
+    echo $awesomeGroup . ' is pretty awesome.';
+?&gt;
+				</code></pre>
+            </section>
+        </section>
+ 
         
  
 			</div><!-- Close .slides -->
