--- a/class2.html
+++ b/class2.html
@@ -134,7 +134,26 @@
 				</code></pre>
             </section>
         </section>
- 
+         
+        <!-- Boolean -->
+        <section id="boolean">
+            <section>
+                <h3>Boolean Variables</h3>
+                <img src="images/kitten-switch.jpg" alt="Kitten with light switch"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/elycefeliz/5726163170/" target="_blank">elycefeliz</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+            </section>
+            <section>
+                <h3>Boolean Variables</h3>
+                <p>Boolean variables represent the logical values True and False</p>
+                <pre><code>
+&lt;?php
+$catsAreBest = true;
+$dogsRule = false;
+?&gt;
+				</code></pre>                
+                <p>If you try to use another variable as a boolean, PHP will guess. The number 0, the empty string '', and the string '0' are considered false, everything else reads as true.</p>
+            </section>
+        </section>
         
  
 			</div><!-- Close .slides -->
