--- a/class2.html
+++ b/class2.html
@@ -543,7 +543,23 @@ if ($bananas &gt; 0) {
                 <p>Take your array of friends and write a foreach loop that echos "My friend NAME like FOOD."</p>
 			</section>
         </section>
-
+        
+        <!-- Final slides-->
+		<section id="final">
+			<section>
+				<h3>You did it!</h3>
+				<img src="images/kitten-yay.jpg" alt="Happy cat"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/laura-kali/7399310732/" target="_blank">OnceAndFutureLaura</a> <a href="http://creativecommons.org/licenses/by-sa/2.0/" target="_blank">cc</a></p>
+			</section>
+			
+			<section>
+				<h3>Resources</h3>
+					<ul>
+						<li><a href="http://www.php.net/manual/en/" target="_blank">PHP Manual</a>, the official PHP documentation. Check the comments; they are useful.</li>
+						<li><a href="http://www.codecademy.com/tracks/php" target="_blank">Code Academy</a>, with interactive PHP lessons to help you review.</li>
+					</ul>
+			</section>
+		</section>
         
         </div><!-- Close .slides -->
   		<footer>
