Added focus image for foreach section

--- a/class2.html
+++ b/class2.html
@@ -510,6 +510,11 @@ if ($bananas &gt; 0) {
         <!-- For Each Loops -->
         <section id="foreach">
             <section>
+                <h3>Foreach</h3>
+                <img src="images/holding-hands.jpg" alt="Couple holding hands"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/mtsofan/8221708017/" target="_blank">John</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+            </section>
+            <section>
                 <h3>Foreach loops</h3>
                 <p>Foreach is a special type of loop that works with arrays.</p>
                 <pre><code>
@@ -540,7 +545,7 @@ if ($bananas &gt; 0) {
             </section>
             <section>
 				<h3>Let's Develop It</h3>
-                <p>Take your array of friends and write a foreach loop that echos "My friend NAME like FOOD."</p>
+                <p>Take your array of friends and write a foreach loop that echos "My friend NAME likes FOOD."</p>
 			</section>
         </section>
         
