Packaged sample code as .zip or .txt, added links.

--- a/class3.html
+++ b/class3.html
@@ -57,7 +57,11 @@
                 <li>Have fun.</li>
               </ul>
               </div>
-            </section>
+            </section>            
+        </section>
+        
+        <!-- Introduction -->
+        <section id="intro">
             <section>
 				<h3>MySQL</h3>
                 <p>WAMP/MAMP includes three components</p>
@@ -67,6 +71,10 @@
                     <li><span class="yellow">P</span>HP - The PHP processor</li>
                 </ol>
                 <p>We have been using Apache and PHP. Today, we'll learn about MySQL.</p>
+			</section>
+            <section>
+				<h3>Today's code</h3>
+                <p>We'll be looking at a lot of code today. You can download a copy to work from, as a <a href="class3-codesample.txt">txt file</a> or a <a href="class3-codesample.zip">.zip file</a>.</p>
 			</section>
         </section>
         
