--- a/class3.html
+++ b/class3.html
@@ -74,7 +74,7 @@
 			</section>
             <section>
 				<h3>Today's code</h3>
-                <p>We'll be looking at a lot of code today. You can download a copy to work from, as a <a href="class3-codesample.txt">txt file</a> or a <a href="class3-codesample.zip">.zip file</a>.</p>
+                <p>We'll be looking at a lot of code today. You can download a copy to work from, as a <a href="class3-codesample.txt">txt file</a> or a <a href="class3-codesample.zip">zip file</a>.</p>
 			</section>
         </section>
         
