More typo fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Class 1 ~ PHP/MySQL ~ Girl Develop It</title>
+		<title>Class Slides ~ PHP/MySQL ~ Girl Develop It</title>
 
 		<meta name="description" content="This is a modification of the official Girl Develop It PHP/MySQL curriculum, developed by Sylvia Richardson for the Raleigh/Durham chapter.
 
