--- a/class3.html
+++ b/class3.html
@@ -276,7 +276,7 @@ VALUES (value1,value2,value3,...);
                 <p>Create a new file called product_insert_result.php and place it in the same folder as index.php</p>
                 <pre><code>
 &lt;?php 
-	include 'include/db.inc.php'; 
+	include 'db.inc.php'; 
 	$company = mysqli_real_escape_string($link, $_GET['company']); 
 	$type = mysqli_real_escape_string($link, $_GET['type']); 
 	$roast = mysqli_real_escape_string($link, $_GET['roast']);
@@ -335,7 +335,7 @@ FROM table_name;
                 <pre><code>
 &lt;?php 
 	include 'db.inc.php';
-	$sql='SELECT productID , company, type, roast, description 
+	$sql='SELECT productID, company, type, roast, description 
         FROM product ORDER BY productID DESC'; 
 	$result = mysqli_query($link, $sql);
 	if (!$result) { 	
