--- a/class4.html
+++ b/class4.html
@@ -78,9 +78,18 @@
             </section>
             <section>
                 <h3>Styling</h3>
-                <p>Let's improve our coffeshop page with some styles. Download the starter files as a .zip.</p>
+                <p>Let's improve our coffeeshop page with some styles. Download the starter files as a .zip.</p>
                 <img src="images/styled-site.png" alt="Screenshot"/>
 				<p>Thanks to <a href="http://amyhendrix.net/">Amy Hendrix</a> for the code.</p>
+            </section>
+            <section>
+                <h3>Let's Develop It</h3>
+                <p>Play with the site code.</p>
+                <ul>
+                    <li>Change the page title</li>
+                    <li>Add a link to the sidebar</li>
+                    <li>Add your name to the footer</li>
+                </ul>
             </section>
         </section>
         
