Added photo-heavy section on database relationships.

--- a/class4.html
+++ b/class4.html
@@ -93,6 +93,35 @@
             </section>
         </section>
         
+        <!--Database Relationships-->
+        <section> 
+            <section>
+                <h3>Database relationships</h3>
+                <img src="images/lemurs.jpg" alt="Lemurs hugging"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/ben124/5145427096/" target="_blank">Ben124</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+            </section>
+            <section>
+                <h3>Each table row has a unique primary key</h3>
+                <img src="images/key.jpg" alt="Single key"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/brenda-starr/3509344100/" target="_blank">Brenda-Starr</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+            </section>
+            <section>
+                <h3>Tables are linked together through their keys</h3>
+                <img src="images/keyring.jpg" alt="Multiple keys on a ring"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/djbiesack/4775029983/" target="_blank">gnuru</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+            </section>
+            <section>
+                <h3>Tables are linked together through their keys</h3>
+                <img src="images/foreign-key.jpg" alt="Key from Spain"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/firelizard5/10812370016/" target="_blank">Sylvia</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+            </section>
+            <section>
+                <h3>MySQL can automatically clean up related data</h3>
+                <img src="images/wall-e.jpg" alt="Wall-E"/>
+				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/silkegb/2716201447/" target="_blank">silkegb</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
+            </section>
+        </section>
+        
         <!--Walk through/Tutorial-->
         <section>            
             <section>
@@ -169,7 +198,7 @@ INSERT INTO company SET	name='Bean Traders', phoneNumber='(919)555-5895';
 INSERT INTO company SET	name='Mean Beans', phoneNumber='(303)555-8475';
 INSERT INTO product SET	companyID_fk=1, type='French Vanilla', roast='dark', description='Strong coffee flavor with a hint of vanilla';
 INSERT INTO product SET	companyID_fk=1, type='Pumpkin spice', roast='medium', description='Seasonal';
-INSERT INTO product SET	companyID_fk=2, type='Dip Into Decaf', roast='light', description='You will barely notice its coffee!';
+INSERT INTO product SET	companyID_fk=2, type='Dip Into Decaf', roast='light', description='You will barely notice it\'s coffee!';
 				</code></pre>              
             </section>
         </section> 
