--- a/class4.html
+++ b/class4.html
@@ -122,7 +122,7 @@
             </section>
         </section>
         
-        <!--Walk through/Tutorial-->
+        <!--Walkthrough/Tutorial-->
         <section>            
             <section>
 				<h3>Let's Develop It</h3>
@@ -192,6 +192,7 @@ ON DELETE CASCADE ON UPDATE CASCADE;
             </section>
             <section>
                 <h3>Add some sample data</h3>
+                <img src="images/phpMyAdmin-SQLqueries.png" alt="SQL screen"/>
                 <pre><code>
 INSERT INTO company SET	name='Starbucks', phoneNumber='(800)555-7282';
 INSERT INTO company SET	name='Bean Traders', phoneNumber='(919)555-5895';
