Added class exercise files

--- a/class4.html
+++ b/class4.html
@@ -78,7 +78,7 @@
             </section>
             <section>
                 <h3>Styling</h3>
-                <p>Let's improve our coffeeshop page with some styles. Download the starter files as a .zip.</p>
+                <p>Let's improve our coffeeshop page with some styles. <a href="class4-exercises.zip">Download the starter files</a> as a .zip.</p>
                 <img src="images/styled-site.png" alt="Screenshot"/>
 				<p>Thanks to <a href="http://amyhendrix.net/">Amy Hendrix</a> for the code.</p>
             </section>
@@ -299,7 +299,7 @@ http://www.website.com/file.php?parameter=value
 						<li><a href="http://www.codecademy.com/tracks/php" target="_blank">Code Academy</a>, with interactive PHP lessons to help you review.</li>
                         <li><a href="http://www.w3schools.com/sql/default.asp" target="_blank">W3Schools SQL Tutorial</a>, a great guide to basic SQL.</li>
                         <li><a href="http://overapi.com/" target="_blank">OverAPI</a>, a collection of quick-reference guides.</li>
-                        <li>The <a href="" target="_blank">completed site code</a> for today's exercises.</li>
+                        <li>The <a href="class4-complete.zip">completed site code</a> for today's exercises.</li>
 					</ul>
 			</section>
 		</section>
