--- a/class4.html
+++ b/class4.html
@@ -111,7 +111,7 @@
 				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/djbiesack/4775029983/" target="_blank">gnuru</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
             </section>
             <section>
-                <h3>Tables are linked together through their keys</h3>
+                <h3>The link is called a foreign key</h3>
                 <img src="images/foreign-key.jpg" alt="Key from Spain"/>
 				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/firelizard5/10812370016/" target="_blank">Sylvia</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>
             </section>
