--- a/class3.html
+++ b/class3.html
@@ -386,7 +386,7 @@ FROM table_name;
 		<section id="final">
 			<section>
 				<h3>You did it!</h3>
-                <img src="images/fireworks.jpg" alt="Cup of coffee"/>
+                <img src="images/fireworks.jpg" alt="Fireworks"/>
 				<p class="credit">Photo credit: <a href="http://www.flickr.com/photos/markwdw85/9425240584/" target="_blank">Mark W.</a> <a href="http://creativecommons.org/licenses/by-nc/2.0/" target="_blank">cc</a></p>				
 			</section>
 			<section>
